Animação do fundo ajustada para 180s, overflow hidden removido e largura fixa do body removida

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,8 @@
 
 body {
     height: 100vh;
-    width: 102vw;
-    overflow: hidden;
     background-image: url(../images/starry-night.png);
-    animation: rotation 120s linear infinite;
+    animation: rotation 180s linear infinite;
 }
 
 #ground {
